tests/baselines/reference/enumWithExport.errors.txt
enumWithExport.ts(5,7): error TS2304: Cannot find name 'y'.


==== enumWithExport.ts (1 errors) ====
    namespace x {
      export let y = 123
    }
    enum x {
      z = y
          ~
!!! error TS2304: Cannot find name 'y'.
    }